--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: scala
 
 env:
   global:
-    - PUBLISH_JDK=openjdk6 # admin/build.sh only publishes when running on this jdk
+    - PUBLISH_JDK=openjdk8 # admin/build.sh only publishes when running on this jdk
 # Don't commit sensitive files, instead commit a version encrypted with $SECRET,
 # this environment variable is encrypted with this repo's private key and stored below:
 # (See http://docs.travis-ci.com/user/environment-variables/#Secure-Variables.)
@@ -12,9 +12,10 @@ script:
   - admin/build.sh
 scala:
   - 2.11.4
+  - 2.12.0-M4
 jdk:
   - openjdk6
-  # - openjdk7
+  - openjdk8
 notifications:
   email:
     - adriaan.moors@typesafe.com
