Do not test scala 2.12.x against jdk6

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ scala:
 jdk:
   - openjdk6
   - oraclejdk8
+matrix:
+  exclude:
+    scala:
+      - 2.12.0-M4
+      jdk: openjdk6
 notifications:
   email:
     - adriaan.moors@typesafe.com
