--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ jdk:
   - oraclejdk8
 matrix:
   exclude:
-    scala:
-      - 2.12.0-M4
+    - scala: 2.12.0-M4
       jdk: openjdk6
 notifications:
   email:
