--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,12 @@ scala:
   - 2.11.8
   - 2.12.0-M4
 jdk:
+  - openjdk6
   - oraclejdk8
+matrix:
+  exclude:
+    - scala: 2.12.0-M4
+      jdk: openjdk6
 notifications:
   email:
     - adriaan.moors@typesafe.com
