--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
 # (See http://docs.travis-ci.com/user/environment-variables/#Secure-Variables.)
     - secure: "apmuVagS7WgWzg9HeDLCcX4INxazi50qukOfPkvluJjm58RCJsDwaZseXrQGqyPzRKuBnAetJ4NDWbZMRkm6QpTiH8grPwDl6iNUSVivvzOZGl3Iy8LvNxUv6CYoQBG+R7d8dW//1xcoHtT2zYo3dYEFpSelfNMMLADNUKXSQmI="
 
+before_install:
+  - sudo hostname "$(hostname | cut -c1-63)"
 script:
   - admin/build.sh
 scala:
