--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,15 @@ script:
   - admin/build.sh
 scala:
   - 2.11.8
-  - 2.12.0-M4
+  - 2.12.0-M5
 jdk:
   - openjdk6
   - oraclejdk8
 matrix:
   exclude:
-    - scala: 2.12.0-M4
+    - scala: 2.12.0-M5
       jdk: openjdk6
 notifications:
   email:
     - adriaan.moors@typesafe.com
+    - danslapman@gmail.com
