--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ script:
   - admin/build.sh
 scala:
   - 2.11.8
-  - 2.12.0-M5
+  - 2.12.0-RC1
 jdk:
   - openjdk6
   - oraclejdk8
 matrix:
   exclude:
-    - scala: 2.12.0-M5
+    - scala: 2.12.0-RC1
       jdk: openjdk6
 notifications:
   email:
