--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,12 @@ before_install:
   - sudo mv /tmp/hosts /etc/hosts
 script:
   - admin/build.sh
+
+addons:
+  apt:
+    packages:
+      - openjdk-6-jdk
+
 jdk:
   - openjdk6
   - oraclejdk8
