--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,42 @@
 language: scala
 
+scala:
+  - 2.11.12
+  - 2.12.8
+  - 2.12.9
+  - 2.12.10
+
 env:
-  global:
-    # PGP_PASSPHRASE
-    - secure: "ImY9KGs8EmTk1mPgZJEWqfy0GR7Wp2lZ07z1eSVwMQTGvYZIPZchNa30jzjB4YVHrG5PvwOSXaGx3ivFRZk/FElWbJ1skFXfHz+JwvNRvN6fhNIhoD0mkPWDTDtA3NnlLen4hbC9rZCPuP4RqrS1jy2nZuD36ZLx2NU9tQM6tUc="
-    # SONA_USER
-    - secure: "f0Acd/hWkgHoT5uyFL+K3D8DB2bRSoXRJhnTueMzJvTHBJZd2kpPo9t7YsmH7fowopVMCcBPzfRyiPoJVf4CJKc/SHCKn/YMJInCC1YPOrchLX/ShTPTeaP4lxFnm/bmmdPOmqfLSQsPIuEP6LBffsq1lvLO6VL61QrDy+D4EQs="
-    # SONA_PASS
-    - secure: "E6OE1MoZ4VQHRNtEyyKfmnj8Bj7uGpgHLmlvJR/iy7qdxBbNA8cEz/Qs64uTft5zfZ9bJsQhiuxLcTtFKYKFP4qvExz8FyilhmUwKjD5Eux4FAeBjDBeXBETM1JYFB+JYP9l8dcQecMeGpd46I52pLjYYmNyQQ1YpOvK29GIQLA="
+  - ADOPTOPENJDK=8
+  - ADOPTOPENJDK=11
 
-script:
-  - admin/build.sh
+before_install:
+  # adding $HOME/.sdkman to cache would create an empty directory, which interferes with the initial installation
+  - "[[ -d $HOME/.sdkman/bin ]] || rm -rf $HOME/.sdkman/"
+  - curl -sL https://get.sdkman.io | bash
+  - echo sdkman_auto_answer=true > $HOME/.sdkman/etc/config
+  - source "$HOME/.sdkman/bin/sdkman-init.sh"
 
-jdk:
-  - openjdk8
-  - openjdk11
+install:
+  - sdk install java $(sdk list java | grep -o "$ADOPTOPENJDK\.[0-9\.]*hs-adpt" | head -1)
+  - unset JAVA_HOME
+  - java -Xmx32m -version
+  - git fetch --tags # get all tags for sbt-dynver
+
+script: ./build.sh
 
 notifications:
   email:
     - adriaan.moors@lightbend.com
     - seth.tisue@lightbend.com
+
+before_cache:
+  - rm -f $HOME/.ivy2/.sbt.ivy.lock
+  - find $HOME/.ivy2/cache     -name "ivydata-*.properties" | xargs rm
+  - find $HOME/.sbt            -name "*.lock"               | xargs rm
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt
+    - $HOME/.cache/coursier
+    - $HOME/.sdkman
